fix spacing on mobile version

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -206,7 +206,7 @@ img {
 .about-us .about-us-left .about-us-content {
   position: absolute;
   bottom: -24%;
-  left: 12%;
+  left: 9%;
   background-color: #f2f2f2;
   padding: 20px 25px 21px 29px;
   display: flex;
@@ -249,7 +249,10 @@ img {
 }
 
 .projects {
-  padding: 50px 0px;
+  padding-top: 50px;
+}
+.projects .container div:first-child h6 {
+  padding-left: 25px;
 }
 .projects .container div:first-child h2 {
   padding-top: 15px;
@@ -306,7 +309,7 @@ img {
   padding: 50px 25px;
 }
 .blog h2 {
-  padding: 15px 0px 35px 0px;
+  padding: 21px 0px 35px 0px;
 }
 .blog .grid {
   column-gap: 3.1rem;
@@ -546,6 +549,9 @@ img {
   .projects .container div:first-child {
     padding: 0px;
   }
+  .projects .container div:first-child h6 {
+    padding-left: 0px;
+  }
   .projects .container div:nth-child(2) {
     padding-left: 0px;
   }
@@ -572,7 +578,7 @@ img {
     margin-right: 20px;
   }
   .blog h2 {
-    padding: 25px 0px 35px 0px;
+    padding: 15px 0px 35px 0px;
   }
   .blog .grid .article p {
     padding-top: 10px;
