--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -102,7 +102,7 @@
     .about-us-content {
       position: absolute;
       bottom: -24%;
-      left: 12%;
+      left: 9%;
       background-color: $neutral-white-100;
       padding: 20px 25px 21px 29px;
       display: flex;
@@ -148,10 +148,12 @@
 }
 //projects
 .projects {
-  padding: 50px 0px;
+  padding-top: 50px;
   .container {
     div:first-child {
-      // padding: 0px 25px;
+      h6 {
+        padding-left: 25px;
+      }
       h2 {
         padding-top: 15px;
         padding-bottom: 35px;
@@ -180,7 +182,7 @@
 
 //cta
 .cta {
-  background-image: url("./assets/images/CTA.png");
+  background-image: url("../images/CTA.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -214,7 +216,7 @@
 .blog {
   padding: 50px 25px;
   h2 {
-    padding: 15px 0px 35px 0px;
+    padding: 21px 0px 35px 0px;
   }
   .grid {
     column-gap: 3.1rem;
