--- a/src/scss/_responsive-media.scss
+++ b/src/scss/_responsive-media.scss
@@ -141,6 +141,9 @@
     .container {
       div:first-child {
         padding: 0px;
+        h6 {
+          padding-left: 0px;
+        }
       }
       div:nth-child(2) {
         padding-left: 0px;
@@ -173,7 +176,7 @@
       margin-right: 20px;
     }
     h2 {
-      padding: 25px 0px 35px 0px;
+      padding: 15px 0px 35px 0px;
     }
     .grid {
       .article {
